--- a/flashcards.html
+++ b/flashcards.html
@@ -13,11 +13,14 @@
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
+            flex-direction: column;
         }
         .card-container {
             display: flex;
             flex-direction: column;
+            align-items: center;
             gap: 15px;
+            text-align: center;
         }
         .card {
             background-color: #fff;
@@ -27,7 +30,6 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             cursor: pointer;
-            text-align: center;
         }
         .answer {
             display: none;
@@ -38,57 +40,88 @@
         .card:hover {
             background-color: #f9f9f9;
         }
+        .button-container {
+            margin-top: 20px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 1em;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            margin: 0 10px;
+        }
+        button:disabled {
+            background-color: #ccc;
+        }
     </style>
 </head>
 <body>
     <div class="card-container">
-        <div class="card" onclick="toggleAnswer(1)">
-            <div class="question">What type of variable are the numbers on football players’ shirts?</div>
-            <div class="answer" id="answer1">Nominal</div>
-        </div>
-        <div class="card" onclick="toggleAnswer(2)">
-            <div class="question">What type of variable is the number of pets in a family?</div>
-            <div class="answer" id="answer2">Ratio</div>
-        </div>
-        <div class="card" onclick="toggleAnswer(3)">
-            <div class="question">What type of variable is the country of residence?</div>
-            <div class="answer" id="answer3">Nominal</div>
-        </div>
-        <div class="card" onclick="toggleAnswer(4)">
-            <div class="question">What type of variable is the choice of auto (domestic or import)?</div>
-            <div class="answer" id="answer4">Nominal</div>
-        </div>
-        <div class="card" onclick="toggleAnswer(5)">
-            <div class="question">What type of variable is the distance (in miles) of commute to work?</div>
-            <div class="answer" id="answer5">Ratio</div>
-        </div>
-        <div class="card" onclick="toggleAnswer(6)">
-            <div class="question">What type of variable is the choice of diet (vegetarian, nonvegetarian)?</div>
-            <div class="answer" id="answer6">Nominal</div>
-        </div>
-        <div class="card" onclick="toggleAnswer(7)">
-            <div class="question">What type of variable is the time spent in the previous month browsing the World Wide Web?</div>
-            <div class="answer" id="answer7">Ratio</div>
-        </div>
-        <div class="card" onclick="toggleAnswer(8)">
-            <div class="question">What type of variable is ownership of a personal computer (yes, no)?</div>
-            <div class="answer" id="answer8">Nominal</div>
-        </div>
-        <div class="card" onclick="toggleAnswer(9)">
-            <div class="question">What type of variable is the marriage form of a society (monogamy, polygyny, polyandry)?</div>
-            <div class="answer" id="answer9">Ordinal</div>
+        <div id="flashcard" class="card" onclick="toggleAnswer()">
+            <div class="question" id="question">What type of variable are the numbers on football players’ shirts?</div>
+            <div class="answer" id="answer">Nominal</div>
         </div>
     </div>
 
+    <div class="button-container">
+        <button id="prevButton" onclick="showPrevCard()">Previous</button>
+        <button id="nextButton" onclick="showNextCard()">Next</button>
+    </div>
+
     <script>
-        function toggleAnswer(cardNumber) {
-            const answer = document.getElementById(`answer${cardNumber}`);
+        const flashcards = [
+            {question: "What type of variable are the numbers on football players’ shirts?", answer: "Nominal"},
+            {question: "What type of variable is the number of pets in a family?", answer: "Ratio"},
+            {question: "What type of variable is the country of residence?", answer: "Nominal"},
+            {question: "What type of variable is the choice of auto (domestic or import)?", answer: "Nominal"},
+            {question: "What type of variable is the distance (in miles) of commute to work?", answer: "Ratio"},
+            {question: "What type of variable is the choice of diet (vegetarian, nonvegetarian)?", answer: "Nominal"},
+            {question: "What type of variable is the time spent in the previous month browsing the World Wide Web?", answer: "Ratio"},
+            {question: "What type of variable is ownership of a personal computer (yes, no)?", answer: "Nominal"},
+            {question: "What type of variable is the marriage form of a society (monogamy, polygyny, polyandry)?", answer: "Ordinal"}
+        ];
+
+        let currentIndex = 0;
+
+        function updateFlashcard() {
+            const flashcard = flashcards[currentIndex];
+            document.getElementById("question").textContent = flashcard.question;
+            document.getElementById("answer").textContent = flashcard.answer;
+            document.getElementById("answer").style.display = "none"; // Hide answer by default
+
+            // Enable or disable buttons based on position
+            document.getElementById("prevButton").disabled = currentIndex === 0;
+            document.getElementById("nextButton").disabled = currentIndex === flashcards.length - 1;
+        }
+
+        function toggleAnswer() {
+            const answer = document.getElementById("answer");
             if (answer.style.display === "none" || answer.style.display === "") {
                 answer.style.display = "block";
             } else {
                 answer.style.display = "none";
             }
         }
+
+        function showPrevCard() {
+            if (currentIndex > 0) {
+                currentIndex--;
+                updateFlashcard();
+            }
+        }
+
+        function showNextCard() {
+            if (currentIndex < flashcards.length - 1) {
+                currentIndex++;
+                updateFlashcard();
+            }
+        }
+
+        // Initialize the first flashcard
+        updateFlashcard();
     </script>
 </body>
 </html>
